@@ -1,4 +1,6 @@
 master
+- noface
+  Added liveleak embedding and Vimeo Link Title.
 
 2.37.1
 - noface
